# SaveSync

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  flake.nix  manifest.json  run.sh  runemu.sh
.github/workflows/: build.yaml  report.yml  test_build.yml
assets/: app.rsf
ext/include/: clay_renderer_C2D.hpp  ext_ptmplays.h  md5.h  ptmplays.h  sigs.h
ext/src/: clay_renderer_C2D.cpp  ext_ptmplays.c  md5.c  ptmplays.c
include/: Application.hpp  Cache.hpp  Client.hpp  Config.hpp  SocketClient.hpp  Theme.hpp  Title.hpp  TitleLoader.hpp  application.hpp  archive.hpp  client.hpp  directory.hpp  httpHandler.hpp  loader.hpp  settings.hpp  smdh.hpp  title.hpp
include/Debug/: ExceptionHandler.hpp  LeakDetector.h  LeakViewerApplication.hpp  Logger.hpp  Profiler.hpp  SymbolUtils.h
include/FS/: Archive.hpp  Directory.hpp  FSUtil.hpp  File.hpp
include/UI/: ErrorScreen.hpp  MainScreen.hpp  Screen.hpp  SettingsScreen.hpp
include/Util/: CURLEasy.hpp  ClayDefines.hpp  CondVar.hpp  Defines.hpp  EmuUtil.hpp  Keyboard.hpp  LeakDetector.h  Logger.hpp  Mutex.hpp  Profiler.hpp  SMDH.hpp  ScopedService.hpp  SpriteSheet.hpp  StringUtil.hpp  TexWrapper.hpp  Worker.hpp
source/: archive.cpp  client.cpp  directory.cpp  httpHandler.cpp  loader.cpp  main.cpp  oldmain.cpp  settings.cpp  smdh.cpp
src/: Application.cpp  Cache.cpp  Config.cpp  Theme.cpp  Title.cpp  TitleLoader.cpp  main.cpp
src/Client/: Client.cpp  Download.cpp  Info.cpp  RequestWorker.cpp  Upload.cpp
src/Debug/: ExceptionHandler.cpp  LeakDetector.c  LeakViewerApplication.cpp  Logger.cpp  Profiler.cpp  SymbolUtils.c
src/FS/: Archive.cpp  Directory.cpp  FSUtil.cpp  File.cpp
src/SocketClient/: Client.cpp  Socket.cpp
src/UI/: ErrorScreen.cpp  MainScreen.cpp  SettingsScreen.cpp
src/Util/: CURLEasy.cpp  CondVar.cpp  EmuUtil.cpp  Keyboard.cpp  LeakDetector.c  Logger.cpp  Mutex.cpp  Profiler.cpp  SMDH.cpp  ScopedService.cpp  SpriteSheet.cpp  StringUtil.cpp  TexWrapper.cpp  Worker.cpp
tools/: build.sh  genSymbols.sh
